css/style.css
#home { 
  background: url(../images/home-bg.JPG) 50% 0 repeat fixed; min-height: 700px; 
  height: 700px; 
  margin: 0 auto; 
  width: 100%; 
  max-width: 1920px; 
  position: relative; 
}
.headshot{
	height:63px;
	border-radius:10px;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	float:left;
	margin-top:7px;
	margin-right:30px;
}

.navbar-items{
	width:550px;
	margin-left:auto;
	margin-right:auto;
}
.contact-icons{
	float:left;
	margin-top:15px;
	height:45px;
	font-size:40px;
}
.contact-icons i{
	padding: 0px 10px;
	color:white;
}
.contact-icons a{
	text-decoration:none;
}

.contact-icons i:hover{
	color:#999;
}

.margin-auto{
	margin-left:auto;
	margin-right:auto;
}
.blog-container{
	width:600px;
	margin:auto;
}
.blog-container ol{
	width:100%;
	margin:0px;
}
.item-logo{
	width:250px;
}

.statement{
	color:#444;
	margin:40px auto;
	width:100%;
}

.port-statement{
	padding:70px 0px 20px 0px;
}

.carousel-inner{
}

.description{
	background-color:rgba(200,200,200,0.3);
	-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
	-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
	box-shadow: 0 2px 10px rgba(0,0,0,.25)
	border-radius:5px;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	padding:10px;
	height:480px;
}
@media (min-width:979px) and (max-width:1200px){
	.description{
		height:385px;
	}
}
.description p{
	line-height:1.5em;
}

.skills{
	text-align:left;
	margin-top:10px;
	background-color: rgba(200,200,200,0.3);
	-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
	-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
	box-shadow: 0 2px 10px rgba(0,0,0,.25) border-radius:5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	padding: 10px;
}

.mockup-thumb{
	height:140px;
	margin-bottom:20px;
	float:left;
	-webkit-box-shadow: 3px 3px 3px rgba(100,100,100,.5);
	-moz-box-shadow: 3px 3px 3px rgba(100,100,100,.5);
	box-shadow: 3px 3px 3px rgba(100,100,100,.5);
}
	

.clear{
	clear:all;
}

.controls{
	position:absolute;
	top:860px;
	width:330px;
	left:37%;;
}
@media (min-width:979px) and (max-width:1200px){
	.controls{
		top:820px;
	}
}
.mockups{
	height:190px;
	margin-top:5px;
	text-align:left;
}
.mockups a{
	margin:0px 10px 0px 5px;
	position: relative;
	top: 120px;
	float:left;
}
.arrow{
	color:#555;
	font-size:50%;
}

.blog{
	padding-top:50px;
	position:relative;
	right:25px;
}

.item h2{
	text-shadow: rgba(0, 0, 0, 0.6) 0px 0px 15px, rgba(0, 0, 0, 0.6) 0px -1px 1px;
}

.table{
	width:675px;
	margin:40px auto;
}

.table img{
	-webkit-box-shadow: 5px 5px 5px rgba(100,100,100,.5);
	-moz-box-shadow: 5px 5px 5px rgba(100,100,100,.5);
	box-shadow: 5px 5px 5px rgba(100,100,100,.5);
}
.top-row{
	font-weight:bold;
}

/*FROM ORIGINAL BOOTSTRAP TEMPLATE*/


 /* GLOBAL STYLES
-------------------------------------------------- */

body {
  padding-bottom: 40px;
  color: #5a5a5a;
}



/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  margin-top: 0px;
  margin-bottom: -70px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
}
.navbar-wrapper .navbar {
  width:770px;
  margin:auto;
}

/* Remove border and change up box shadow for more contrast */
.navbar .navbar-inner {
  border: 0;
  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
     -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          box-shadow: 0 2px 10px rgba(0,0,0,.25);
  height:80px;
}

/* Downsize the brand/project name a bit */
.navbar .brand {
  padding: 25px 45px 16px; /* Increase vertical padding to match navbar links */
  font-size: 32px;
  font-weight: bold;
  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
  color:rgb(60,60,60);
}

/* Navbar links: increase padding for taller navbar */
.navbar .nav > li > a {
  padding: 15px 20px;
}

/* Offset the responsive button for proper vertical alignment */
.navbar .btn-navbar {
  margin-top: 10px;
}



/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  margin-bottom:150px;
  margin-top:5px;
}

.carousel .container {
  position: relative;
  z-index: 9;
}

.carousel-control {
  font-size: 120px;
  text-shadow: 0 1px 1px rgba(0,0,0,.4);
  background-color: transparent;
  border: none;
  margin:0px auto;
  height:auto;
  overflow:hidden;
  width:50%;
}

.carousel .item {
  height: 500px;
}
.carousel-background {
  border-radius:3px;
  -moz-border-radius:3px;
  -webkit-border-radius:3px;
}

.blue-splash{
  position:absolute;
  top:0%;
  left:0%;
  width:inherit;

}

.carousel-caption {
  background-color: transparent;
  top:12%;
  padding: 0 20px;
  color:white;
  width:inherit;
}

.carousel-caption h1,
.carousel-caption .lead {
  margin: 0;
  line-height: 1.25;
  color: #fff;
  text-shadow: 0 1px 1px rgba(0,0,0,.4);
}
.carousel-caption .btn {
  margin-top: 10px;
}

.row{
	position:relative;
}
.read-more{
	height:auto;
	width:110px;
	margin:30px auto 0px auto;
}
footer{
	width:960px;
	margin:50px auto 20px auto;
}

